fix:  profile y overflow

--- a/frontend/src/components/Profile/Profile.css
+++ b/frontend/src/components/Profile/Profile.css
@@ -4,10 +4,8 @@
     align-items: center;
     justify-content: center;
     margin-top: 3.125vmax;
-    width: 100vw;
+    width: 99vw;
     height: 100vh;
-    left: 0%;
-    right: 0%;
 }
 
 .profileContainer h1 {
